; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_gang_tree_assemble.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_gang_tree_assemble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32, %struct.TYPE_10__* }
%struct.TYPE_11__ = type { i32 }

@SPA_GANGBLOCKSIZE = common dso_local global i32 0, align 4
@zio_gang_tree_assemble_done = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i32*, %struct.TYPE_11__**)* @zio_gang_tree_assemble to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zio_gang_tree_assemble(%struct.TYPE_10__* %0, i32* %1, %struct.TYPE_11__** %2) #0 {
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_11__**, align 8
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.TYPE_11__** %2, %struct.TYPE_11__*** %6, align 8
  %9 = load %struct.TYPE_11__**, %struct.TYPE_11__*** %6, align 8
  %10 = call %struct.TYPE_11__* @zio_gang_node_alloc(%struct.TYPE_11__** %9)
  store %struct.TYPE_11__* %10, %struct.TYPE_11__** %7, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @SPA_GANGBLOCKSIZE, align 4
  %15 = call i32* @abd_get_from_buf(i32 %13, i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %16, i32 0, i32 3
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %20 = icmp eq %struct.TYPE_10__* %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @ASSERT(i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @BP_IS_GANG(i32* %23)
  %25 = call i32 @ASSERT(i32 %24)
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i32, i32* @SPA_GANGBLOCKSIZE, align 4
  %33 = load i32, i32* @zio_gang_tree_assemble_done, align 4
  %34 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %39 = call i32 @ZIO_GANG_CHILD_FLAGS(%struct.TYPE_10__* %38)
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %41 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %40, i32 0, i32 0
  %42 = call i32 @zio_read(%struct.TYPE_10__* %26, i32 %29, i32* %30, i32* %31, i32 %32, i32 %33, %struct.TYPE_11__* %34, i32 %37, i32 %39, i32* %41)
  %43 = call i32 @zio_nowait(i32 %42)
  ret void
}

declare dso_local %struct.TYPE_11__* @zio_gang_node_alloc(%struct.TYPE_11__**) #1

declare dso_local i32* @abd_get_from_buf(i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @BP_IS_GANG(i32*) #1

declare dso_local i32 @zio_nowait(i32) #1

declare dso_local i32 @zio_read(%struct.TYPE_10__*, i32, i32*, i32*, i32, i32, %struct.TYPE_11__*, i32, i32, i32*) #1

declare dso_local i32 @ZIO_GANG_CHILD_FLAGS(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
